--- a/styles.css
+++ b/styles.css
@@ -1,115 +1,1 @@
-:root {
-	--color1: rgb(255,255,255);
-	--color2: rgba(8,7,82,.8);
-}
-html {
-}
-body {
-	display: flex;
-	justify-content: center;
-	align-content: center;
-	background: rgba(0, 0, 0, 1.0);
-	height: 100vh;	
-}
-.timer {
-	background
-	width: 700px;
-	height: 300px;
-	border-radius: 20px;
-	padding: 20px;
-	box-sizing: border-box;
-	margin: auto;
-}
-.timer__config {
-    display: flex;
-    justify-content: flex-end;
-}
-.timer__countdownContainer {
-    display: flex;
-    justify-content: center;
-    font-family: 'Nunito Sans', sans-serif;
-}
-.timer__info {
-	display: flex;
-	justify-content: center;
-	width: 100%;
-}
-.timer__info-text {
-    font-family: 'Nunito Sans', sans-serif;
-	font-size: 1.2em;
-	display: inline-block;
-	margin: 0 60px;
-	margin-top: 10px;
-	color: var(--color1);
-}
-.timer__countdownContainer-background {
-	width: 140px;
-	height: 140px;
-	padding: 3px;
-	box-sizing: border-box;
-	border-radius: 50%;
-	background-image: linear-gradient(to top, #041151, #091b66, #0e267d, #113194, #113dac, #0b54c4, #036bdc, #0083f3, #00a7ff, #00c8ff, #00e5ff, #23fff1);
-
-}
-.timer__countdownContainer-background-numbers {
-    width: 130px;
-    height: 130px;
-    background: none;
-    border: none;
-    font-size: 6em;
-    text-align: center;
-	color: var(--color1);
-	border-radius: 50%;
-	background: rgba(0, 0, 0, 1.0);
-
-}
-.timer__countdownContainer-background-numbers:focus {
-	border: none;
-	outline: none;
-}
-.buttonsContainerFlex {
-	display: flex;
-	justify-content: space-around;
-	margin-top: 15px;
-}
-.timer__buttonContainer {
-	width: 120px;
-	height: 40px;
-	border-radius: 20px;
-	background-image: linear-gradient(to right, #041151, #091b66, #0e267d, #113194, #113dac, #0b54c4, #036bdc, #0083f3, #00a7ff, #00c8ff, #00e5ff, #23fff1);
-	padding: 2px;
-	box-sizing: border-box;
-}
-.timer__buttonContainer-button {
-	background: none;
-	border: 2px solid var(--color1);
-	border-radius: 20px;
-	width: 116px;
-	height: 36px;
-	display: flex;
-	justify-content: space-between;
-	cursor: pointer;
-	align-items: center;
-	padding: 0 20px;
-	color: var(--color1);
-
-}
-.timer__buttonContainer-button-text {
-	margin: 0;
-
-}
-.points {
-	width: 20px;
-	height: 100%;
-	color: var(--color1);
-	margin: 0 10px;
-}
-.alarm {
-	display: none;
-}
-
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
-}
+:root{--color1: rgb(255,255,255);--color2: rgba(8,7,82,.8);}html{}body{display: flex;justify-content: center;align-content: center;background: rgba(0, 0, 0, 1.0);height: 100vh;}.timer{backgroundwidth: 700px;height: 300px;border-radius: 20px;padding: 20px;box-sizing: border-box;margin: auto;}.timer__config{display: flex; justify-content: flex-end;}.timer__countdownContainer{display: flex; justify-content: center; font-family: 'Nunito Sans', sans-serif;}.timer__info{display: flex;justify-content: center;width: 100%;}.timer__info-text{font-family: 'Nunito Sans', sans-serif;font-size: 1.2em;display: inline-block;margin: 0 60px;margin-top: 10px;color: var(--color1);}.timer__countdownContainer-background{width: 140px;height: 140px;padding: 3px;box-sizing: border-box;border-radius: 50%;background-image: linear-gradient(to top, #041151, #091b66, #0e267d, #113194, #113dac, #0b54c4, #036bdc, #0083f3, #00a7ff, #00c8ff, #00e5ff, #23fff1);}.timer__countdownContainer-background-numbers{width: 130px; height: 130px; background: none; border: none; font-size: 6em; text-align: center;color: var(--color1);border-radius: 50%;background: rgba(0, 0, 0, 1.0);}.timer__countdownContainer-background-numbers:focus{border: none;outline: none;}.buttonsContainerFlex{display: flex;justify-content: space-around;margin-top: 15px;}.timer__buttonContainer{width: 120px;height: 40px;border-radius: 20px;background-image: linear-gradient(to right, #041151, #091b66, #0e267d, #113194, #113dac, #0b54c4, #036bdc, #0083f3, #00a7ff, #00c8ff, #00e5ff, #23fff1);padding: 2px;box-sizing: border-box;}.timer__buttonContainer-button{background: none;border: 2px solid var(--color1);border-radius: 20px;width: 116px;height: 36px;display: flex;justify-content: space-between;cursor: pointer;align-items: center;padding: 0 20px;color: var(--color1);}.timer__buttonContainer-button-text{margin: 0;}.points{width: 20px;height: 100%;color: var(--color1);margin: 0 10px;}.alarm{display: none;}input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button{-webkit-appearance: none; margin: 0;}
